--- a/templates/poste/index.html.twig
+++ b/templates/poste/index.html.twig
@@ -1,7 +1,39 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PosteController!{% endblock %}
+{% block title %}Posts{% endblock %}
 
 {% block body %}
-<h1> Bonjour Aziz </h1>
+    <h1>All Posts</h1>
+
+    {% if posts is not empty %}
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Content</th>
+                <th>Status</th>
+                <th>Posted On</th>
+                <th>Actions</th> <!-- Colonne pour les actions -->
+            </tr>
+        </thead>
+        <tbody>
+            {% for post in posts %}
+                <tr>
+                    <td>{{ post.titre }}</td>
+                    <td>{{ post.contenue }}</td>
+                    <td>{{ post.etat }}</td>
+                    <td>{{ post.datePublication|date('Y-m-d') }}</td>
+                    <td>
+                        <!-- Boutons Modifier et Supprimer -->
+                        <a href="{{ path('post_edit', {'id': post.id}) }}" class="btn btn-primary">Modifier</a>
+                        <a href="{{ path('post_delete', {'id': post.id}) }}" class="btn btn-danger" onclick="return confirm('Êtes-vous sûr de vouloir supprimer ce post ?')">Supprimer</a>
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+{% else %}
+    <p>No posts found.</p>
+{% endif %}
+
 {% endblock %}
