--- a/templates/commentaire/ajouterCommentaire.html.twig
+++ b/templates/commentaire/ajouterCommentaire.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ajouter un nouveau post
+{% block title %}Ajouter un nouveau commentaire
 {% endblock %}
 
 {% block body %}
@@ -11,10 +11,10 @@
 					<div class="card-header bg-primary text-white text-center rounded-top-4 animate__animated animate__fadeInDown">
 						<h2 class="mb-0">
 							<i class="fas fa-plus-circle"></i>
-							Ajouter un Post</h2>
+							Ajouter un commentaire</h2>
 					</div>
 					<div class="card-body p-5 animate__animated animate__fadeInUp animate__delay-1s">
-{{ form_start(form, {'attr': {'class': 'needs-validation', 'novalidate': 'novalidate', 'id': 'postForm', 'data-turbo': 'false'}}) }}
+{{ form_start(form, {'attr': {'class': 'needs-validation', 'novalidate': 'novalidate', 'id': 'commentaireForm', 'data-turbo': 'false'}}) }}
 						{% for field in form %}
 							{% if field.vars.name != '_token' %}
 								<div class="mb-4 animate__animated animate__fadeInUp animate__delay-2s">
