--- a/templates/poste/backoffice.html.twig
+++ b/templates/poste/backoffice.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Gestion de publications{% endblock %}
+{% block title %} Backoffice - Publications{% endblock %}
 
 {% block body %}
     <div class="container mt-5">
