--- a/templates/back/show.html.twig
+++ b/templates/back/show.html.twig
@@ -96,8 +96,7 @@
     <img src="{{ asset('uploads/' ~ product.image) }}" 
          alt="{{ product.nom }}" 
          class="img-fluid rounded"
-         style="width: 80px; height: 80px; object-fit: cover;">
-{% else %}
+style="object-fit: contain; height: 400px; width: 100%;">{% else %}
     <img src="{{ asset('uploads/default.png.png.png') }}" 
          alt="Default Image" 
          class="img-fluid rounded"
